@@ -21,7 +21,7 @@ import ai.metaheuristic.ai.yaml.metadata_aggregate_function.MetadataAggregateFun
 import ai.metaheuristic.ai.yaml.metadata_aggregate_function.MetadataAggregateFunctionParamsYamlUtils;
 import ai.metaheuristic.ai.yaml.reduce_values_function.ReduceVariablesConfigParamsYaml;
 import ai.metaheuristic.api.EnumsApi;
-import ai.metaheuristic.commons.utils.DirUtils;
+import ai.metaheuristic.commons.S;
 import ai.metaheuristic.commons.utils.ZipUtils;
 import ai.metaheuristic.commons.yaml.ml.fitting.FittingYaml;
 import ai.metaheuristic.commons.yaml.ml.fitting.FittingYamlUtils;
@@ -29,12 +29,15 @@ import ai.metaheuristic.commons.yaml.task_ml.metrics.MetricValues;
 import ai.metaheuristic.commons.yaml.task_ml.metrics.MetricsUtils;
 import lombok.AllArgsConstructor;
 import lombok.SneakyThrows;
-import org.apache.commons.io.FileUtils;
+import org.apache.commons.io.file.PathUtils;
+import org.apache.commons.io.filefilter.FileFileFilter;
+import org.apache.commons.io.filefilter.IOFileFilter;
+import org.apache.commons.io.filefilter.SuffixFileFilter;
 import org.apache.commons.lang3.tuple.Pair;
 import org.springframework.lang.Nullable;
 
-import java.io.File;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.*;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
@@ -58,18 +61,18 @@ public class ReduceVariablesUtils {
     }
 
     public static ReduceVariablesData.ReduceVariablesResult reduceVariables(
-            File zipFile, ReduceVariablesConfigParamsYaml config, ReduceVariablesData.Request request) {
-        return reduceVariables(List.of(zipFile), config, request, null, (o)->{});
+            Path actualTemp, Path zipFile, ReduceVariablesConfigParamsYaml config, ReduceVariablesData.Request request) {
+        return reduceVariables(actualTemp, List.of(zipFile), config, request, null, (o)->{}, (o)->false);
     }
 
     public static ReduceVariablesData.ReduceVariablesResult reduceVariables(
-            List<File> zipFiles, ReduceVariablesConfigParamsYaml config, ReduceVariablesData.Request request, @Nullable Function<String, Boolean> filter,
-            Consumer<ProgressData> progressConsumer
+            Path actualTemp, List<Path> zipFiles, ReduceVariablesConfigParamsYaml config, ReduceVariablesData.Request request, @Nullable Function<String, Boolean> filter,
+            Consumer<ProgressData> progressConsumer, Function<ReduceVariablesData.PermutedVariables, Boolean> attentionSelector
             ) {
 
         ReduceVariablesData.VariablesData data = new ReduceVariablesData.VariablesData();
-        for (File zipFile : zipFiles) {
-            loadData(data, zipFile, config, progressConsumer);
+        for (Path zipFile : zipFiles) {
+            loadData(actualTemp, data, zipFile, config, progressConsumer);
         }
 
         Map<String, Map<String, Pair<AtomicInteger, AtomicInteger>>> freqValues = getFreqValues(data, filter);
@@ -115,7 +118,7 @@ public class ReduceVariablesUtils {
             result.byValue.put(key, value);
         }
 
-        result.metricsList = getExperimentMetrics(data);
+        result.attentionsAndExperimentMetrics = getExperimentMetrics(data, attentionSelector);
 
         return result;
     }
@@ -153,13 +156,32 @@ public class ReduceVariablesUtils {
         return freqValues;
     }
 
-    private static List<ReduceVariablesData.ExperimentMetrics> getExperimentMetrics(ReduceVariablesData.VariablesData data) {
-        List<ReduceVariablesData.ExperimentMetrics> ems = new ArrayList<>();
+
+
+    private static ReduceVariablesData.AttentionsAndExperimentMetrics getExperimentMetrics(
+            ReduceVariablesData.VariablesData data, Function<ReduceVariablesData.PermutedVariables, Boolean> attentionSelector) {
+        ReduceVariablesData.AttentionsAndExperimentMetrics r = new ReduceVariablesData.AttentionsAndExperimentMetrics();
 
         boolean emptyMetrics = false;
         for (ReduceVariablesData.TopPermutedVariables permutedVariable : data.permutedVariables) {
             for (ReduceVariablesData.PermutedVariables subPermutedVariable : permutedVariable.subPermutedVariables) {
-
+                if (attentionSelector.apply(subPermutedVariable)) {
+                    if (subPermutedVariable.metricValues==null || S.b(subPermutedVariable.metricValues.comment)) {
+                        System.out.println("(subPermutedVariable.metricValues==null || S.b(subPermutedVariable.metricValues.comment))");
+                        continue;
+                    }
+                    final ReduceVariablesData.Attention attention = new ReduceVariablesData.Attention();
+                    attention.params.putAll(permutedVariable.values);
+                    attention.params.remove("predicted");
+                    for (Map.Entry<String, String> entry : subPermutedVariable.values.entrySet()) {
+                        if (!entry.getKey().startsWith("is")) {
+                            continue;
+                        }
+                        attention.dataset.put(entry.getKey(), entry.getValue());
+                    }
+                    attention.result = subPermutedVariable.metricValues.comment;
+                    r.attentions.add(attention);
+                }
                 if (subPermutedVariable.fitting== EnumsApi.Fitting.UNDERFITTING) {
                     continue;
                 }
@@ -174,15 +196,15 @@ public class ReduceVariablesUtils {
                 em.metrics = subPermutedVariable.metricValues.values.entrySet().stream().map(o->""+o.getKey()+":"+o.getValue()).collect(Collectors.joining(","));
                 em.dir = subPermutedVariable.dir;
 
-                ems.add(em);
+                r.metricsList.add(em);
             }
         }
         if (emptyMetrics) {
             System.out.println("Found an empty metrics");
         }
         final String metricsName = "sum_norm_6";
-        ems.sort((o1, o2) -> o2.metricValues.values.get(metricsName).compareTo(o1.metricValues.values.get(metricsName)));
-        return ems;
+        r.metricsList.sort((o1, o2) -> o2.metricValues.values.get(metricsName).compareTo(o1.metricValues.values.get(metricsName)));
+        return r;
     }
 
     private static Map<String, Pair<AtomicInteger, AtomicInteger>> getFreqVariables(
@@ -217,43 +239,47 @@ public class ReduceVariablesUtils {
     }
 
     @SneakyThrows
-    public static ReduceVariablesData.VariablesData loadData(ReduceVariablesData.VariablesData data, File zipFile, ReduceVariablesConfigParamsYaml config,
+    public static ReduceVariablesData.VariablesData loadData(Path actualTemp, ReduceVariablesData.VariablesData data, Path zipFile, ReduceVariablesConfigParamsYaml config,
                                                              Consumer<ProgressData> consumer) {
 
-        File tempDir = DirUtils.createMhTempDir("reduce-variables-");
-        if (tempDir==null) {
-            throw new RuntimeException("Can't create temp dir in metaheuristic-temp dir");
-        }
-        File zipDir = new File(tempDir, "zip");
+        Path tempDir = Files.createTempDirectory(actualTemp, "reduce-variables-");
+        Path zipDir = actualTemp.resolve("zip");
+        Files.createDirectories(zipDir);
+
         ZipUtils.unzipFolder(zipFile, zipDir, false, Collections.emptyList(), false);
 
-        Collection<File> files =  FileUtils.listFiles(zipDir, new String[]{"zip"}, true);
+        final IOFileFilter filter = FileFileFilter.INSTANCE.and(new SuffixFileFilter(new String[]{".zip"}));
+        Collection<Path> files = PathUtils.walk(zipDir, filter, Integer.MAX_VALUE, false, FileVisitOption.FOLLOW_LINKS).collect(Collectors.toList());
         int i=0;
-        for (File f : files) {
-            consumer.accept(new ProgressData(zipDir.getAbsolutePath(), files.size(), i++));
-            File tmp = DirUtils.createTempDir(tempDir, "load-data");
-            File zipDataDir = new File(tmp, "zip");
+        for (Path f : files) {
+            consumer.accept(new ProgressData(""+ zipFile.normalize(), files.size(), ++i));
+            Path tmp = Files.createTempDirectory(tempDir, "load-data-");
+            Path zipDataDir = tmp.resolve("zip");
             ZipUtils.unzipFolder(f, zipDataDir, false, Collections.emptyList(), false);
 
-            File[] top = zipDataDir.listFiles(File::isDirectory);
-            if (top==null || top.length==0) {
-                throw new RuntimeException("can't find any dir in " + zipDataDir.getAbsolutePath());
+            List<Path> top = Files.list(zipDataDir).collect(Collectors.toList());
+
+            if (top.isEmpty()) {
+                throw new RuntimeException("can't find any dir in " + zipDataDir.normalize());
+            }
+            if (top.size()>1) {
+                throw new RuntimeException("actual size: " +top.size()+", " + top);
             }
 
-            File[] ctxDirs = top[0].listFiles(File::isDirectory);
-            if (ctxDirs==null) {
-                throw new RuntimeException("can't read content od dir " + top[0].getAbsolutePath());
+            Collection<Path> ctxDirs = Files.list(top.get(0)).collect(Collectors.toList());
+            if (ctxDirs.isEmpty()) {
+                throw new RuntimeException("can't find any dir in " + top.get(0).normalize());
             }
 
             ReduceVariablesData.TopPermutedVariables pvs = new ReduceVariablesData.TopPermutedVariables();
             data.permutedVariables.add(pvs);
 
             pvs.subPermutedVariables = new ArrayList<>();
-            for (File ctxDir : ctxDirs) {
-                File metadata = new File(ctxDir, MH_METADATA_YAML_FILE_NAME);
+            for (Path ctxDir : ctxDirs) {
+                Path metadata = ctxDir.resolve(MH_METADATA_YAML_FILE_NAME);
                 MetadataAggregateFunctionParamsYaml mafpy;
-                if (metadata.exists()) {
-                    String yaml = FileUtils.readFileToString(metadata, StandardCharsets.UTF_8);
+                if (Files.exists(metadata)) {
+                    String yaml = Files.readString(metadata, StandardCharsets.UTF_8);
                     mafpy = MetadataAggregateFunctionParamsYamlUtils.BASE_YAML_UTILS.to(yaml);
                 }
                 else {
@@ -263,12 +289,15 @@ public class ReduceVariablesUtils {
                 Map<String, String> values = new HashMap<>();
                 EnumsApi.Fitting fitting = null;
                 MetricValues metricValues = null;
-                for (File file : FileUtils.listFiles(ctxDir, null, false)) {
-                    final String fileName = file.getName();
+
+                Collection<Path> ffs = Files.list(ctxDir).collect(Collectors.toList());
+
+                for (Path file : ffs) {
+                    final String fileName = file.getFileName().toString();
                     if (MH_METADATA_YAML_FILE_NAME.equals(fileName)) {
                         continue;
                     }
-                    String content = FileUtils.readFileToString(file, StandardCharsets.UTF_8);
+                    String content = Files.readString(file, StandardCharsets.UTF_8);
                     String varName = mafpy.mapping.stream()
                             .filter(o->o.get(fileName)!=null)
                             .findFirst()
@@ -287,12 +316,12 @@ public class ReduceVariablesUtils {
                     }
                 }
 
-                if (ctxDir.getName().equals("1")) {
+                if (ctxDir.getFileName().toString().equals("1")) {
                     pvs.values.putAll(values);
                 }
                 else {
                     final ReduceVariablesData.PermutedVariables permutedVariables = new ReduceVariablesData.PermutedVariables();
-                    permutedVariables.dir = ""+f.getParentFile().getParentFile().getName()+File.separatorChar+f.getParentFile().getName()+File.separatorChar+top[0].getName()+File.separatorChar+ctxDir.getName();
+                    permutedVariables.dir = ctxDir.toString();
                     permutedVariables.fitting = fitting;
                     permutedVariables.metricValues = metricValues;
                     permutedVariables.values.putAll(values);
@@ -303,7 +332,7 @@ public class ReduceVariablesUtils {
 
             int ii=0;
         }
-
+        PathUtils.delete(tempDir);
         return data;
     }
 
